force-app/main/default/objects/Time_Stamp__c/Time_Stamp__c.object-meta.xml
<CustomObject>
    <label>Time Stamp</label>
    <nameField>
        <label>Time_Stamp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Stamps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>