force-app/main/default/objects/Time_Stamp__c/fields/milliSecs__c.field-meta.xml
<CustomField>
    <fullName>milliSecs__c</fullName>
    <label>milliSecs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>