force-app/main/default/objects/Time_Stamp__c/fields/PanelCategory__c.field-meta.xml
<CustomField>
    <fullName>PanelCategory__c</fullName>
    <label>PanelCategory</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>