force-app/main/default/objects/Time_Stamp__c/fields/PH_Assessment__c.field-meta.xml
<CustomField>
    <fullName>PH_Assessment__c</fullName>
    <label>PH_Assessment</label>
    <referenceTo>PH_Assessment__c</referenceTo>
    <relationshipLabel>Time Stamps</relationshipLabel>
    <relationshipName>Time_Stamps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>