force-app/main/default/objects/Time_Stamp__c/fields/Total_Interview_Length__c.field-meta.xml
<CustomField>
    <fullName>Total_Interview_Length__c</fullName>
    <label>Total Interview Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>